[gd_scene load_steps=14 format=3 uid="uid://c0ouwjirjqmvg"]

[ext_resource type="Texture2D" uid="uid://bwnoytlytsqjg" path="res://Assets/Spritesheets/Zombie-Sheet.png" id="1_ble81"]
[ext_resource type="Script" path="res://Enemies/zombie.gd" id="1_cmdnp"]
[ext_resource type="Theme" uid="uid://bsa0ll5770eb0" path="res://core.tres" id="3_lv8vw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j3xg8"]
atlas = ExtResource("1_ble81")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrb7t"]
atlas = ExtResource("1_ble81")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq4me"]
atlas = ExtResource("1_ble81")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xygdh"]
atlas = ExtResource("1_ble81")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cye3d"]
atlas = ExtResource("1_ble81")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2o1k"]
atlas = ExtResource("1_ble81")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lr6v"]
atlas = ExtResource("1_ble81")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sydob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3xg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrb7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq4me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xygdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cye3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2o1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lr6v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_m4vhd"]
radius = 191.83

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y0016"]
radius = 141.077
height = 337.016

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_cmdnp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_sydob")
frame_progress = 0.198209

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2(1.20376, 1.84093)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
light_mask = 0
position = Vector2(-1.53413, 0)
scale = Vector2(0.318527, 0.225459)
shape = SubResource("CircleShape2D_m4vhd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2(-1, 0)
scale = Vector2(0.0194748, -0.0215818)
shape = SubResource("CapsuleShape2D_y0016")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 0
position = Vector2(-1, 0)
scale = Vector2(0.0694811, -0.0713041)
shape = SubResource("CapsuleShape2D_y0016")

[node name="TakeDamageCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="Label" type="Label" parent="."]
offset_left = -13.0
offset_top = -22.0
offset_right = 27.0
offset_bottom = 1.0
scale = Vector2(0.608117, 0.608117)
theme = ExtResource("3_lv8vw")
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="TakeDamageCooldown" to="." method="_on_take_damage_cooldown_timeout"]
